Wednesday, April 16th, 2003 	James Turner <james@worldforge.org>

	* Updated the ProjectBuilder files, including targets for some of
	  the test cases, which all pass with flying colours.

Friday, January 31, 2003	Al Riddoch <alriddoch@zepler.org>

	* Convert to using pkg-config

Saturday, January 11, 2003	James Turner <james@worldforge.org>

	* Changed 'libtool' to 'libtoolize' in autogen.sh so
	  an autoXXXX build works under Mac OS-X.
	* Added project builder files to produce a WFMath framework
	  If you use this or have any comments, please let me know.

Monday, November 4, 2002	Ron Steinke <rsteinke@w-link.net>

	* Added isValid() member functions to TimeStamp, TimeDiff
	  (the flags were already there)
	* Improved TimeStamp, TimeDiff documentation

Saturday, November 2, 2002	Ron Steinke <rsteinke@w-link.net>

	* Added documentation. With the exception of those associated
	  with Polygon, all API functions should now be documented.

Saturday, November 2, 2002	Al Riddoch <alriddoch@zepler.org>

	* Add rpm spec.

Friday, November 1, 2002	Ron Steinke <rsteinke@w-link.net>

	* Added Doxyfile.in to CVS, did some work towards docs

Wednesday, October 30, 2002     Michael Koch <konqueror@gmx.de>

	* Added manpage for wfmath-config.

Wednesday, October 23, 2002	Ron Steinke <rsteinke@w-link.net>

	* Portability fix. Apparently debian on sparc uses
	  int instead of long for the usec field of struct timeval.

Monday, October 10, 2002	Ron Steinke <rsteinke@w-link.net>

	* Changed operator==() for quaternions to regard two
	  quaternions as equal iff they produce the same
	  3x3 rotation matrix. This means q == -q is true.
        * Added a Shuffle() function which randomizes the order
          of elements contained in a std::vector.
	* Doc updates
	* Bumped version number to 0.2.10

Monday, September 2, 2002	Ron Steinke <rsteinke@w-link.net>

	* Bumped version number to 0.2.9

Friday, August 2, 2002		Ron Steinke <rsteinke@w-link.net>
